# ds_interview_python

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini
ds_coding_interviews_in_python.egg-info/: .gitignore
ds_coding_interviews_in_python/ch2lists/: chl5_find_min.py  chlg10_rearrange_sorted_list.py  chlg11_max_sum_sublist.py  chlg1_rm_even_ints.py  chlg2_merge_2_sorted_lists.py  chlg3_two_nums_add_to_k.py  chlg4_find_list_prods.py  chlg5_find_min.py  chlg6_find_unq_int.py  chlg7_second_max.py  chlg8_rrotate.py  chlg9_rearrange_pos_neg.py
ds_coding_interviews_in_python/ch3linkedlists/: linkedlist.py  main.py  nodes.py  setops.py
ds_coding_interviews_in_python/ch4stackqueue/: chlg6_postfix.py  chlg7_next_greater_ele.py  chlg8_balanced.py  myqueue.py  queue.py  stack.py  twostack.py
ds_coding_interviews_in_python/ch5graphs/: chlg3_detect_cycle.py  chlg4_mother_vertex.py  chlg5_count_edges.py  chlg6_path_exists.py  graph.py  graph_search.py  main.py
ds_coding_interviews_in_python/ch6trees/: avl.py  avl_main.py  bst.py  bst_main.py  chlg1_min_val.py  chlg2_find_k_max_val.py  chlg3_find_ancestors.py  chlg4_find_height.py  chlg5_find_k_nodes.py  main.py  red_black_tree.py
tests/: test_ds_coding_interviews_in_python.py
tests/test_ch2lists/: test_chlg10_rearrange_sorted_list.py  test_chlg11_max_sum_sublist.py  test_chlg1_rm_even_ints.py  test_chlg2_merge_2_sorted_lists.py  test_chlg3_two_nums_add_to_k.py  test_chlg4_find_list_prods.py  test_chlg5_find_min.py  test_chlg6_find_unq_int.py  test_chlg7_second_max.py  test_chlg8_rrotate.py  (+1 more)
(+20 files in other folders)
