[tool.poetry]
name = "ds_coding_interviews_in_python"
version = "0.1.0"
description = "Repo for Educative.io course Data Structures in Coding Interviews in Python"
authors = ["David Dansby <ddansby89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.812"
coverage = "^5.5"
pytest-cov = "^2.11.1"
black = "^20.8b1"
pre-commit = "^2.11.1"
flake8 = "^3.8.4"
isort = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
indent = '    '
known_third_party = ["pytest"]
known_first_party = ["ds_coding_interviews_in_python"]

[tool.pytest.ini_options]
testpaths = ["test", "tests"]

# coverage
[tool.coverage.paths]
source = ["ds_coding_interviews_in_python"]

[tool.coverage.run]
branch = true
source = ["ds_coding_interviews_in_python"]
